ecmascript/parser/tests/typescript-errors/tsc/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers/input.ts.stderr
error: Expected a type
 --> $DIR/tests/typescript-errors/tsc/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers/input.ts:8:8
  |
8 |     a: super();
  |        ^^^^^

error: Expected a type
  --> $DIR/tests/typescript-errors/tsc/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers/input.ts:20:15
   |
20 |     static a: super();
   |               ^^^^^

